tests/snapshots/purity_parity/purity_parity__F__61_strict_module_private_unannotated_allowed.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/61_strict_module_private_unannotated_allowed.flx
Category: F
Strict: true
Expect compile error: false

== vm command ==
$ flux --no-cache --root examples/type_system examples/type_system/61_strict_module_private_unannotated_allowed.flx
exit_code: 0

== jit command ==
$ flux --no-cache --root examples/type_system examples/type_system/61_strict_module_private_unannotated_allowed.flx --jit
exit_code: 0

== vm tuples ==
<none>

== jit tuples ==
<none>

== parity ==
match

== mismatch_debug ==
<none>
